--- a/pages/components/header.css
+++ b/pages/components/header.css
@@ -1,30 +1,29 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Aclonica&display=swap");
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 .main {
-  height: 10vh;
+  height: 56px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   width: 100%;
+  transition: 0.4s;
+}
+.main_active {
+  height: 65px;
 }
 .main_header {
+  height: 56px;
   display: flex;
   width: 100%;
   justify-content: space-between;
   align-items: center;
   padding: 0% 5%;
+}
+.main_header.active {
+  position: fixed;
+  top: 0;
+  background-color: rgb(0, 0, 0);
+  z-index: 100;
 }
 .main_header_logo img {
   width: 20px;
@@ -36,14 +35,17 @@ body {
 .main_header_content ul li {
   list-style-type: none;
 }
-.main_header_content ul li a {
+.main_header_content_href {
   display: block;
-  padding: 10px;
+  padding: 10px 20px;
   text-decoration: none;
   font-family: "Roboto", sans-serif;
   color: black;
   font-weight: 500;
   font-size: 17px;
+}
+.main_header_content_href.active {
+  color: rgb(249, 249, 249) !important;
 }
 .main_header_login button {
   padding: 7px 15px;
@@ -51,4 +53,31 @@ body {
   background-color: rgba(232, 92, 92, 0.422);
   border-radius: 5px;
   cursor: pointer;
+  transition: 0.3s;
+}
+.main_header_login button.active {
+  background-color: white;
+}
+
+@keyframes scrollHeader {
+  0% {
+    transform: translateY(-5px);
+    height: 56px;
+  }
+  100% {
+    transform: translateY(0px);
+    height: 65px;
+  }
+}
+@keyframes scrollHeader2 {
+  0% {
+    position: fixed;
+    top: 3px;
+    background-color: rgb(0, 0, 0);
+  }
+  50% {
+    position: fixed;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.3);
+  }
 }/*# sourceMappingURL=header.css.map */
