--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
-h1 {
-  font-size: 10px;
-}/*# sourceMappingURL=index.css.map */
+*{
+    box-sizing: border-box;
+}
+body{
+ padding: 0;
+ margin: 0;
+}
