--- a/pages/components/banner.scss
+++ b/pages/components/banner.scss
@@ -1,18 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Aclonica&display=swap');
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
-body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
 
-}
 
 .mainB {
     height: 85vh;
@@ -38,6 +28,7 @@ body {
                 font-size: 20px;
                 font-weight: 400;
                 font-family: 'Roboto', sans-serif;
+                
             }
 
             &_content {
@@ -77,6 +68,7 @@ body {
                 border-radius: 10px;
                 color: white;
                 font-size: 16px;
+                cursor: pointer;
             }
         }
 
