--- a/pages/components/header.scss
+++ b/pages/components/header.scss
@@ -1,64 +1,100 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Aclonica&display=swap');
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-body{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-   
-}
+
 .main {
-    height: 10vh;
+    height: 56px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     width: 100%;
+    transition: 0.4s;
+ &_active{
+    height: 65px;
+ }
     &_header {
+        height: 56px;
+        &.active {
+            position: fixed;
+            top: 0;
+            background-color: rgb(0, 0, 0);
+            z-index: 100;
+        }
+        
+
         display: flex;
         width: 100%;
         justify-content: space-between;
         align-items: center;
         padding: 0% 5%;
+
         &_logo {
-            img{
+            img {
                 width: 20px;
                 height: 20px;
             }
         }
 
         &_content {
-            ul{
+            ul {
                 display: flex;
 
-                li{
-                    list-style-type:none;
-                    a{
-                        display: block;
-                        padding: 10px;
-                        text-decoration: none;
-                        font-family: 'Roboto', sans-serif;
-                        color: black;
-                        font-weight: 500;
-                        font-size: 17px;
-                    }
+                li {
+                    list-style-type: none;
+                }
+            }
+            &_href {
+                display: block;
+                padding: 10px 20px;
+                text-decoration: none;
+                font-family: 'Roboto', sans-serif;
+                color: black;
+                font-weight: 500;
+                font-size: 17px;
+                
+                &.active {
+                    color: rgb(249, 249, 249) !important;
                 }
             }
         }
 
         &_login {
-            button{
+            button {
                 padding: 7px 15px;
                 border: none;
                 background-color: rgba(232, 92, 92, 0.422);
                 border-radius: 5px;
-
                 cursor: pointer;
+                transition: 0.3s;
+                &.active{
+                    background-color: white;
+                }
             }
         }
     }
+}
+@keyframes scrollHeader {
+    0%{
+        transform: translateY(-5px);
+        height: 56px;
+    }
+    100%{
+        transform: translateY(0px);
+        height: 65px;
+    }
+}
+@keyframes scrollHeader2 {
+    0%{
+
+        position: fixed;
+        top: 3px;
+        background-color: rgb(0, 0, 0);
+    }
+    50%{
+
+        position: fixed;
+        top: 0;
+        background-color: rgba(0, 0, 0, 0.3);
+    }
+   
 }
