--- a/pages/components/headernew.css
+++ b/pages/components/headernew.css
@@ -37,7 +37,7 @@
 }
 .main_header_content_href {
   display: block;
-  padding: 10px 20px;
+  padding: 22px 20px;
   text-decoration: none;
   font-family: "Roboto", sans-serif;
   color: black;
@@ -80,4 +80,13 @@
     top: 0;
     background-color: rgba(0, 0, 0, 0.3);
   }
-}/*# sourceMappingURL=header.css.map */
+}
+.mouse ul {
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.4s;
+}
+.mouse:hover > ul {
+  opacity: 1;
+  visibility: visible;
+}/*# sourceMappingURL=headernew.css.map */
