--- a/pages/components/headernew.scss
+++ b/pages/components/headernew.scss
@@ -9,18 +9,21 @@
     justify-content: flex-start;
     width: 100%;
     transition: 0.4s;
- &_active{
-    height: 65px;
- }
+
+    &_active {
+        height: 65px;
+    }
+
     &_header {
         height: 56px;
+
         &.active {
             position: fixed;
             top: 0;
             background-color: rgb(0, 0, 0);
             z-index: 100;
         }
-        
+
 
         display: flex;
         width: 100%;
@@ -43,17 +46,21 @@
                     list-style-type: none;
                 }
             }
+
             &_href {
                 display: block;
-                padding: 10px 20px;
+                padding: 22px 20px;
                 text-decoration: none;
                 font-family: 'Roboto', sans-serif;
                 color: black;
                 font-weight: 500;
                 font-size: 17px;
-                
+
+
+
                 &.active {
                     color: rgb(249, 249, 249) !important;
+
                 }
             }
         }
@@ -66,35 +73,51 @@
                 border-radius: 5px;
                 cursor: pointer;
                 transition: 0.3s;
-                &.active{
+
+                &.active {
                     background-color: white;
                 }
             }
         }
     }
 }
+
 @keyframes scrollHeader {
-    0%{
+    0% {
         transform: translateY(-5px);
         height: 56px;
     }
-    100%{
+
+    100% {
         transform: translateY(0px);
         height: 65px;
     }
 }
+
 @keyframes scrollHeader2 {
-    0%{
+    0% {
 
         position: fixed;
         top: 3px;
         background-color: rgb(0, 0, 0);
     }
-    50%{
+
+    50% {
 
         position: fixed;
         top: 0;
         background-color: rgba(0, 0, 0, 0.3);
     }
-   
+
+}
+.mouse{
+    ul{
+      opacity: 0;
+      visibility: hidden;
+      transition: 0.4s;
+    }
+    &:hover > ul{
+        opacity:1;
+        visibility: visible;
+    }
 }
