--- a/pages/components/product/product.css
+++ b/pages/components/product/product.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Aclonica&display=swap");
 .productpage {
   width: 100%;
 }
@@ -20,14 +22,49 @@
 }
 .productpage_data_main_item {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: auto auto auto auto;
   width: 80%;
-  gap: 5%;
+  gap: 50px;
 }
 .productpage_data_main_item_s {
-  cursor: pointer;
-  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.356);
+  position: relative;
+  width: 90%;
+  height: 380px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  overflow: hidden;
 }
 .productpage_data_main_item_s img {
+  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.13);
   width: 100%;
+  height: 85%;
+}
+.productpage_data_main_item_s_description {
+  font-family: "Roboto", sans-serif;
+  width: 100%;
+  text-align: center;
+  padding-top: 20px;
+}
+.productpage_data_main_item_s_price {
+  font-family: "Roboto", sans-serif;
+  font-weight: 600;
+  width: 100%;
+  text-align: center;
+}
+.productpage_data_main_item_s_button {
+  position: absolute;
+  width: 100%;
+  height: 58px;
+  bottom: -58px;
+  background-color: black;
+  font-family: "Roboto", sans-serif;
+  color: white;
+  border: none;
+  cursor: pointer;
+  transition: 0.2s;
+}
+.productpage_data_main_item_s:hover > .productpage_data_main_item_s_button {
+  bottom: 0;
 }/*# sourceMappingURL=product.css.map */
