--- a/pages/components/product/product.scss
+++ b/pages/components/product/product.scss
@@ -35,7 +35,7 @@ sans-serif;
                 gap: 50px;
                 &_s {
                     position: relative;
-                    width: 90%;
+                    width: 300px;
                     height: 380px;
                     display: flex;
                     flex-direction: column;
