--- a/dashboard/components/headers.css
+++ b/dashboard/components/headers.css
@@ -10,14 +10,19 @@ li {
 }
 .header_main {
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 .header_main_content {
+  flex: 1;
   border-top: 1px solid rgba(0, 0, 0, 0.177);
   margin-top: 20%;
   padding-top: 5%;
 }
 .header_main_content ul {
   padding-left: 0px;
+  margin: 0;
 }
 .header_main_content ul li a {
   text-decoration: none;
@@ -30,4 +35,4 @@ li {
 .header_main_content ul li a.active {
   background-color: rgba(114, 114, 202, 0.307);
   color: blue;
-}/*# sourceMappingURL=header.css.map */
+}/*# sourceMappingURL=headers.css.map */
