--- a/dashboard/components/headers.scss
+++ b/dashboard/components/headers.scss
@@ -15,17 +15,20 @@ li{
     padding: 10% 0;
     &_main{
         height: 100%;
-       
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
         &_logo{
 
         }
         &_content{
+            flex: 1;
             border-top: 1px solid rgba(0, 0, 0, 0.177);
             margin-top: 20%;
             padding-top: 5%;
             ul{
                 padding-left: 0px;
-            
+                margin: 0;
                 li{
                     a{
                         text-decoration: none;
