--- a/pages/components/header/headers.scss
+++ b/pages/components/header/headers.scss
@@ -1,56 +1,166 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Aclonica&display=swap');
-$font1 :'Roboto',
-sans-serif;
-$font2 :"Aclonica",
-sans-serif;
 
 
-li {
-    list-style-type: none;
-}
+.main {
+    height: 56px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 100%;
+    transition: 0.4s;
 
-.header {
-    height: 100%;
-    padding: 10% 0;
+    &_active {
+        height: 65px;
+    }
 
-    &_main {
-        height: 100%;
+    &_header {
+        height: 56px;
+
+        &.active {
+            position: fixed;
+            top: 0;
+            background-color: rgb(0, 0, 0);
+            z-index: 100;
+        }
+
+
         display: flex;
-        flex-direction: column;
-        justify-content: space-around;
+        width: 100%;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0% 5%;
 
-        &_logo {}
+        &_logo {
+
+
+            img {
+                width: 20px;
+                height: 20px;
+            }
+        }
 
         &_content {
-            flex: 1;
-            border-top: 1px solid rgba(0, 0, 0, 0.177);
-            margin-top: 20%;
-            padding-top: 5%;
 
             ul {
-                padding-left: 0px;
-                margin: 0;
+                display: flex;
 
                 li {
-                    a {
-                        text-decoration: none;
-                        font-family: $font1;
-                        color: black;
-                        padding: 5% 0;
-                        font-weight: 400;
-                        display: block;
+                    list-style-type: none;
+                }
+            }
 
-                        &.active {
-                            background-color: rgba(114, 114, 202, 0.307);
-                            color: blue;
-                        }
-                    }
+            &_href {
+                display: block;
+                padding: 22px 20px;
+                text-decoration: none;
+                font-family: 'Roboto', sans-serif;
+                color: black;
+                font-weight: 500;
+                font-size: 17px;
+
+
+
+                &.active {
+                    color: rgb(249, 249, 249) !important;
+
                 }
             }
         }
 
-        &_account {}
+        &_login {
+            &_cart {
+                cursor: pointer;
+                position: relative;
+
+                &_noti {
+                    i {}
+
+                    div {
+                        position: absolute;
+                        top: -37%;
+                        right: -36%;
+                        background-color: rgb(117, 32, 32);
+                        border-radius: 100%;
+                        width: 15px;
+                        height: 15px;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+
+                        span {
+                            font-size: 11px;
+                            color: white;
+                            font-family: Arial, Helvetica, sans-serif;
+                        }
+                    }
+                }
+            }
+
+            display: flex;
+            justify-content: space-between;
+            width: 13%;
+            align-items: center;
+
+            button {
+                padding: 7px 15px;
+                border: none;
+                background-color: rgba(232, 92, 92, 0.422);
+                border-radius: 5px;
+                cursor: pointer;
+                transition: 0.3s;
+
+                &.active {
+                    background-color: white;
+                }
+            }
+        }
+
+
+    }
+}
+
+@keyframes scrollHeader {
+    0% {
+        transform: translateY(-5px);
+        height: 56px;
+    }
+
+    100% {
+        transform: translateY(0px);
+        height: 65px;
+    }
+}
+
+@keyframes scrollHeader2 {
+    0% {
+
+        position: fixed;
+        top: 3px;
+        background-color: rgb(0, 0, 0);
+    }
+
+    50% {
+
+        position: fixed;
+        top: 0;
+        background-color: rgba(0, 0, 0, 0.3);
+    }
+
+}
+
+.mouse {
+    ul {
+        opacity: 0;
+        visibility: hidden;
+        transition: 0.4s;
+        z-index: 1000;
+    }
+
+    &:hover>ul {
+        opacity: 1;
+        visibility: visible;
+        z-index: 1000;
     }
 }
 
@@ -61,11 +171,30 @@ body {
 }
 
 .cart_popup {
+
+
+    background-color: white;
     position: fixed;
     overflow: auto;
     right: 0;
+    top: 0;
+    z-index: 100;
     width: 30%;
     height: 100%;
+    right: -30%;
+    transition: 0.5s;
+
+    &_close {
+        position: absolute;
+        left: 93%;
+        top: 1%;
+        cursor: pointer;
+        user-select: none;
+    }
+
+    &.active {
+        right: 0%;
+    }
 
     &_header {
         margin-top: 20px;
@@ -151,10 +280,12 @@ body {
             &_right {
                 position: relative;
                 overflow: hidden;
+                display: flex;
+                flex-direction: column;
+                width: 100%;
 
                 &_close {
-                    position: absolute;
-                    left: 89%;
+                    align-self: flex-end;
                     cursor: pointer;
                     user-select: none;
                     font-family: Arial, Helvetica, sans-serif;
@@ -168,14 +299,20 @@ body {
                     display: flex;
                     justify-content: center;
                     align-items: center;
+                    margin: 12px 0 12px 0;
                 }
 
-                &_top {}
+                &_top {
+                    display: block;
+                    margin: 0px 0 12px 0;
+                }
 
                 &_bottom {
                     display: flex;
+                    margin: 12px 0 12px 0;
                     justify-content: space-between;
-                    padding: 20px;
+
+                    width: 100%;
                     align-items: center;
 
                     &_quantity {
@@ -223,5 +360,16 @@ body {
                 }
             }
         }
+    }
+}
+
+.bgPopup {
+    visibility: hidden;
+    transition: 0.5s;
+    opacity: 0;
+
+    &.active {
+        visibility: visible;
+        opacity: 1;
     }
 }
