--- a/views/components/album/albums.css
+++ b/views/components/album/albums.css
@@ -69,16 +69,29 @@
   background-image: linear-gradient(to bottom, #fccb90, #ff9a9e);
 }
 .mainAlbum_container_lists {
-  width: 90%;
+  width: 60%;
   margin: 2% 0;
   display: grid;
   gap: 10px;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 40px 0;
+}
+@media only screen and (max-width: 1800px) {
+  .mainAlbum_container_lists {
+    grid-template-columns: repeat(3, 1fr);
+    width: 70%;
+  }
+}
+@media only screen and (max-width: 1700px) {
+  .mainAlbum_container_lists {
+    grid-template-columns: repeat(3, 1fr);
+    width: 80%;
+  }
 }
 @media only screen and (max-width: 1280px) {
   .mainAlbum_container_lists {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    width: 60%;
   }
 }
 .mainAlbum_container_lists_list_imgs_img {
@@ -109,4 +122,4 @@
 }
 .mainAlbum_container_lists_list_titles_title h1:nth-child(2) {
   padding-top: 15px;
-}/*# sourceMappingURL=album.css.map */
+}/*# sourceMappingURL=albums.css.map */
