--- a/views/components/header/header.scss
+++ b/views/components/header/header.scss
@@ -1,5 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Aclonica&display=swap');
+$font1 :'Roboto',
+sans-serif;
+$font2 :"Aclonica",
+sans-serif;
+
+@mixin screen1800 {
+    @media only screen and (max-width:1800px) {
+        @content;
+    }
+}
+
+@mixin screen1700 {
+    @media only screen and (max-width:1700px) {
+        @content;
+    }
+}
+
+@mixin screen1500 {
+    @media only screen and (max-width:1500px) {
+        @content;
+    }
+}
+
+@mixin mobile {
+    @media only screen and (max-width:1280px) {
+        @content;
+    }
+}
 
 
 .main {
@@ -69,6 +97,16 @@
         }
 
         &_login {
+            display: flex;
+            justify-content: space-between;
+            width: 13%;
+            align-items: center;
+
+            @include screen1800() {
+                display: flex;
+            }
+
+
             &_cart {
                 cursor: pointer;
                 position: relative;
@@ -97,10 +135,14 @@
                 }
             }
 
-            display: flex;
-            justify-content: space-between;
-            width: 13%;
-            align-items: center;
+
+            @include screen1700() {
+                width: 15%;
+            }
+
+            @include screen1500() {
+                width: 20%;
+            }
 
             button {
                 padding: 7px 15px;
@@ -372,4 +414,61 @@ body {
         visibility: visible;
         opacity: 1;
     }
+}
+
+.searchProduct {
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 20%;
+
+    input {
+        padding: 5px 10px;
+        border-radius: 3px;
+        border: 1px solid rgba(0, 0, 0, 0.836);
+        transition: 0.2s;
+
+        &:focus {
+            outline: none;
+            border-radius: 3px;
+
+        }
+    }
+
+    i {
+        margin: 0 0 0 3%;
+        font-size: 18px;
+        color: rgba(0, 0, 0, 0.801);
+        cursor: pointer;
+    }
+}
+
+.infoSearch {
+    position: absolute;
+    top: 100%;
+    background-color: white;
+    z-index: 1000;
+    &_item {
+        width: 100%;
+        display: flex;
+        margin: 2px 0;
+        cursor: pointer;
+        transition: 0.4s;
+
+        &:hover {
+            background-color: rgba(0, 0, 0, 0.104);
+        }
+
+        img {
+            width: 80px;
+            margin: 0 3px;
+            border-radius: 3px;
+        }
+
+        &_title {
+            white-space: nowrap;
+            text-overflow: ellipsis;
+        }
+    }
+
 }
