--- a/views/components/header/headers.scss
+++ b/views/components/header/headers.scss
@@ -147,7 +147,7 @@ sans-serif;
             button {
                 padding: 7px 15px;
                 border: none;
-                background-color: rgba(232, 92, 92, 0.422);
+                background-color: black;
                 border-radius: 5px;
                 cursor: pointer;
                 transition: 0.3s;
