--- a/views/components/header/headers.css
+++ b/views/components/header/headers.css
@@ -92,7 +92,7 @@
 .main_header_login button {
   padding: 7px 15px;
   border: none;
-  background-color: rgba(232, 92, 92, 0.422);
+  background-color: black;
   border-radius: 5px;
   cursor: pointer;
   transition: 0.3s;
@@ -362,4 +362,4 @@ body {
 .infoSearch_item_title {
   white-space: nowrap;
   text-overflow: ellipsis;
-}/*# sourceMappingURL=header.css.map */
+}/*# sourceMappingURL=headers.css.map */
